home.css
*{
    padding: 0;
    border: 0;
    box-sizing: border-box;
}
@font-face {
    font-family: "merriweather";
    src: url(https://use.typekit.net/baa3pel.css);
}
body{
    display: flex;
    flex-direction: column;
    margin: 0;
}
.header{
    color: white;
    background-color: #861f41;
    padding: 15px 0;
    font-family: arial;

}
.headertop{
    display: flex;
    justify-content: space-between;
    margin-left: 100px;
    margin-right: 100px;
    padding: 5px;

}
.headlogo{
    font-family:'Courier New', Courier, monospace;
    display: flex;
} 
ul{
    display: flex;
    list-style: none;
    gap: 20px;
}
.browsesec{
    color: white;
    font-size: large;
    padding: 0;
    font-family: arial;
    font-weight: bolder;
    display: flex;
    justify-content: center;
    background-color: #818181;
    
}
.browseboxes{
    display: flex;
    align-content: center;
    margin-left: 100px;
    margin-right: 100px;
}
.box{
    background-color: #818181;
    padding: 30px;
    width: 100%;
    font-size: 2vmin;
    text-align: center;
    text-shadow: 2px 2px #444343;
}
.box:hover{
    background-color: #444343;
}
li{
    color: white;
    font-size: 1.5vmin;
}
a{
    color: #ffffff;
    text-decoration: none;
}
a:hover{
    color: #DDDADA;
}

.section1{
    background-color: white;
    display: flex;
    flex-direction: row;
    padding: 20px;
    margin-left: 100px;
    margin-right: 100px;
    align-items: center;
    gap: 20px;
}
.leftwords{
    font-family: Arial, Helvetica, sans-serif;
}
.sec1header{
    font-size: 4vw;
}
.sec1header2{
    font-size: 4vw;
}
.sec1para{
    font-size: 2vw;
}
.sec1img{
    width: 600;
    height: 400;
    width: 60%;
    height:60%;
    box-shadow: 5px 10px black;
}

.section2{
    padding-bottom: 20px;
    background-color: #861f41;
    display: flex;
    flex-direction: column;
}
.sec2head{
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    color: #ffffff;
    font-size: 3vmin;
    text-shadow: 2px 2px #444343;
}
.interestposts{
    display: flex;
    gap: 30px;
    justify-content: center;
    flex-wrap: wrap;
}
.post1:hover{
    box-shadow: 5px 5px black;
}
.footer{
    color: white;
    background-color: black;
    padding: 20px 0;
    font-family: Arial;
    bottom: 0;
    width: 100%;
}
.footcont{
    display: flex;
    justify-content: space-between;
    margin-left: 100px;
    margin-right: 100px;
    padding: 10px;
}
.vtquote{
    font-size: .7vw;
}
.infosec{
    display: flex;
    justify-content: space-between;
    background-color: #d06411;
    color: #ffffff;
    padding: 20px 0;
    font-family: arial;
}
.leftside{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    text-align: center;
    width: 100%;
    border: 2px solid #ffffff;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 10px;
    background-color: #E5751F;
}
.rightside{
    display: flex;
    flex-direction: column;
    text-align: center;
    flex-wrap: wrap;
    width: 100%;
    border: 2px solid #ffffff;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 10px;
    background-color: #E5751F;
}
.leftcont{
    font-size: 2vmin;
    text-shadow: 2px 2px #444343;

}
.rightcont{
    font-size: 2vmin;
    text-shadow: 2px 2px #444343;
}
.info{
    display: flex;
    margin-left: 20vmin;
    margin-right: 20vmin;
    gap: 20px;
}
a.logina{
    text-decoration: underline;
}
.righthead{
    font-weight: 900;
    font-size: 3vmin;
    text-shadow: 2px 2px #444343;
}
.lefthead{
    font-weight: 900;
    font-size: 3vmin;
    text-shadow: 2px 2px #444343;
}
.recsports{
    width: 16vmin;
    height: 3vmin;
}

